proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/correct/oop_allowed_class_name.py
#Test that class names with default parent classes are allowed
class Cat:
	weight = 6

	def __init__(self, weight):
		self.weight = weight

	def make_noise(self):
		return "meow"

c = Cat(4)
print(c.make_noise())
